--- a/css/Apropos.css
+++ b/css/Apropos.css
@@ -601,6 +601,207 @@ nav .nav-links li a {
         right: -3px;
     }
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .sec-title{
+        margin-right: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row-reverse;
+        position: relative;
+        top: 20px;
+    }
+    
+    .sec-title h2{
+        margin-right: 0.1rem;
+        flex-direction: row-reverse;
+        justify-content: center;
+        font-size: 21px;
+        font-family: 'Arial Rounded MT Bold', sans-serif;
+    }
+    
+    .sec-title hr {
+        display: flex;
+        background-color: black;
+        border: 2px solid;
+        margin-left: -338px;
+        margin-right: 0px;
+        width: 308px;
+    }
+    .image {
+        text-align: start;
+    }
+    
+    .image img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .text p{
+        font-size: 20px;
+        margin-left: 2%;
+        margin-top: -2%;
+    }
+
+    .info {
+        display: flex;
+        flex-direction: column-reverse;
+        position: relative;
+        top: -33%;
+    }
+    
+    .back{
+        background-color: #D6AF3B;
+        width: 83%;
+        height: 33%;
+        margin-left: 19px;
+        position: relative;
+        bottom: 32%;
+    }
+
+    .min-back h3{
+        font-family: 'Arial Rounded MT Bold', sans-serif;
+        margin-left: 3%;
+        position: relative;
+        top: 7px;
+        font-size: 23px;
+    }
+
+    .back-text pre{
+        font-size: 20px;
+    }
+
+    .back-img{
+        text-align: right;
+        /* position: relative; */
+        left: 3%;
+        bottom: 50%;
+    }
+
+    .back-img img{
+        text-align: right;
+        /*position: relative;*/
+        bottom: 48%;
+        width: 54%;
+        left: 0%;
+    }
+
+    .team{
+        margin-top: 0%;
+    }
+    .deu-back{
+        background-color: #D6AF3B;
+        width: 83%;
+        height: 265px;
+        position: relative;
+        bottom: 54px;
+        left: 87px;
+        border-radius: 6px;
+        z-index: -1;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+    
+    .img-inf img{
+        margin-right: 4%;
+        max-width: 81%;
+        top: -416px;
+        height: auto;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+    
+    .tri-back{
+        background-color: white;
+        width: 92%;
+        height: 200px;
+        border-radius: 6px;
+        border: #868383 solid 2px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+    .our{
+        position: relative;
+        top: -536px;
+        left: 92px;
+        margin-right: 30%;
+
+    }
+    .our h3{
+        font-family: 'Arial Rounded MT Bold', sans-serif;
+        position: relative;
+        top: 54px;
+        left: 2%;
+        font-size: 23px;
+    }
+    
+    .tri-back p{
+        font-size: 18px;
+        margin-left: 6px;
+        position: relative;
+        top: 25px;
+    }
+
+    .end{
+        margin-top: -18%;
+        margin-bottom: 20%;
+    }
+    
+    
+    .fin-back{
+        background-color: #D6AF3B;
+        width: 80%;
+        height: 296px;
+        position: relative;
+        bottom: 51px;
+        left: 14%;
+        border-radius: 6px;
+        z-index: -1;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+    
+    .img-histo img{
+        max-width: 80%;
+        height: auto;
+        margin-left: 8%;
+        position: relative;
+        top: -439px;
+    }
+    
+    .histo{
+        position: relative;
+        top: -574px;
+        left: 305px;
+        margin-right: 41%;
+    }
+    
+    .histo-tit h3{
+        font-family: 'Arial Rounded MT Bold', sans-serif;
+        font-size: 26px;
+        position: relative;
+        top: 58px;
+        right: 348px;
+        margin-left: 103%;
+        white-space: nowrap;
+    }
+    
+    .histo-info{
+        background-color: white;
+        width: 85%;
+        height: 253px;
+        border-radius: 6px;
+        border: #868383 solid 2px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+        
+    }
+    
+    .histo-info p{
+        font-size: 18px;
+        margin: 0px;
+        position: relative;
+        top: 17%;
+        right: -3px;
+    }
+  }
+
 footer {
     width: 100%;
     height: 470px;
